Only enable plugin rpc api when enabled on --rpc-http-api or --rpc-ws-apis
Signed-off-by: Antony Denyer <git@antonydenyer.co.uk>